# CampusTask

./: .gitignore  CHANGELOG.md  README.md  USER_GUIDE.md  ai_harness.py  cli.py  eval_cases.json  main.py  pyproject.toml  storage.py  task_manager.py
.github/workflows/: test.yml
campus_task/: __init__.py  __main__.py  cli.py  storage.py  task_manager.py
tests/: test_storage.py  test_task_manager.py
