[project]
name = "campus-task"
version = "0.3.0"
description = "校园任务清单 — 命令行任务管理工具"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "luo", email = "student@example.com"}
]
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
